welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: not found: value &&
    if(nums(i)==6)&&(nums(i+1)==6)
                  ^array667:12: error: not found: value &&
    if(nums(i)==6)&&(nums(i+1)==7)
                  ^