welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int =
{
  var compt6:Int = 0
  var compt7:Int = 0
  
  for(i <- 0 to nums.length-2)
  {
    if(nums(i)==6)&&(nums(i+1)==6)
    {
      compt6 = compt6 + 1
    }
    if(nums(i)==6)&&(nums(i+1)==7)
    {
      compt7 = compt7 + 1
    }
  }
  
  return compt6
}